# assign_ws

./: .gitignore  README.md  README_assign.md
src/ack_bringup/: CMakeLists.txt  package.xml
src/ack_bringup/launch/: sim.launch.py
src/ack_controller/: package.xml  setup.cfg  setup.py
src/ack_controller/ack_controller/: control_node.py
src/ack_description/: CMakeLists.txt  package.xml
src/ack_description/urdf/: ack.urdf.xacro
src/ack_description/worlds/: shapes.sdf
src/ack_perception/: package.xml  setup.cfg  setup.py
src/ack_perception/ack_perception/: vision_node.py
